# SEAL_BGV_demo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/seal_bgv_demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  test.cpp
app/src/main/cpp/include/seal/util/: config.h
app/src/main/java/com/example/seal_bgv_demo/: ClientEndpoint.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/seal_bgv_demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
